simdOps and add our Float Clusterer into PQuantization